[package]
authors = ["Sergey Ratiashvili <serg.s.r@gmail.com>"]
description = "Contract to handle withdraval vouchers"
edition = "2021"
name = "drop-withdrawal-voucher"
version = "1.0.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.5.4", default-features = false }
cosmwasm-std = { version = "1.5.4", default-features = false }
cw2 = { version = "1.1.2", default-features = false }
cw721-base = { workspace = true }
drop-staking-base = { workspace = true }
semver = { workspace = true }
