[package]
authors = ["Vladislav Vasilev <vfaust.thefuture@gmail.com>"]
description = "Contract to mint NFT's for dNTRN"
edition = "2021"
name = "drop-ntrn-derivative-withdrawal-voucher"
version = "1.0.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-ownable = { workspace = true }
cw2 = { workspace = true }
serde-json-wasm = { workspace = true }
sha2 = { workspace = true }
drop-staking-base = { workspace = true }
drop-helpers = { workspace = true }
semver = { workspace = true }
neutron-sdk = { workspace = true }
thiserror = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true }
cw-utils = { workspace = true }
cw-storage-plus = { workspace = true }